4.0
	+ Set version to 4.0
	+ Added afterFwRestart method to firewall helper
3.5
	+ Remove bad usage of Error package
	+ Use a blocking lock to get iptables resource on restart
	  and stop to avoid other modules to get it
	+ beforeFwRestart don't called on stopped or unconfigured modules
	+ Added beforeFwRestart method to firewall helper
	+ Fixed crash when editing view in Summarized Report
	+ Added EBox::Iptables::executeModuleRules to be able to execute
	  rules from a given module calling this new method
	+ Set version to 3.5
3.4
	+ Added portUsedByService method
	+ Updated to use the new haproxy API
	+ Use service instead of deprecated invoke-rc.d for init.d scripts
	+ Set version to 3.4
	+ Fixed crash when editing view in Summarized Report
	+ Added EBox::Iptables::executeModuleRules to be able to execute
	+ Removed code made dead by new managament of DHCP nameservers
	+ Select text clearer for interfaces which have virtual interfaces
3.3
	+ Switch from Error to TryCatch for exception handling
	+ Added missing EBox::Exceptions uses
	+ Set version to 3.3
3.2
	+ Set version to 3.2
3.1.7
	+ Added missing EBox::Gettext uses
3.1.6
	+ Use common prefix (zentyal-firewall) for logging redirections,
	  snat, drop and log rules
	+ Use DATETIME type in date column for consolidation tables
	+ Summarised report has breadcrumbs now
3.1.5
	+ Use (i|f|o)accept chains in user's defined firewall rules to be
	  able to analyse the traffic
3.1.4
	+ New icons and style for Packet Filter section
	+ Moved warnings inside of models instead of Packet Filter frontpage
	+ Fix regression (INVALID packets on FORWARD were accepted)
	+ Delete iintservs and fobjects unused chains
3.1.3
	+ Hide from External to Internal section by default to avoid confusion
	  with Port Forwarding unless show_ext_to_int_rules confkey is enabled
3.1.2
	+ Added menu icon
	+ Set iaccept, faccept and oaccept chains instead of ACCEPT target
	  to be able to analyse traffic using IPS