@@ -1,4 +1,5 @@
 4.0
+	+ Adapt firewall to reduce on remoteservices module
 	+ Set version to 4.0
 	+ Added afterFwRestart method to firewall helper
 3.5
